fix(bottom-nav): center alignment

--- a/workspaces/iam/src/app/modules/shared/bottom-navigation/bottom-navigation.component.scss
+++ b/workspaces/iam/src/app/modules/shared/bottom-navigation/bottom-navigation.component.scss
@@ -6,7 +6,7 @@
       flex-direction: column;
       line-height: 1.6rem;
       font-size: 1.2rem;
-      min-width: inherit;
+      width: 8rem;
       height: auto;
       &:hover {
         text-decoration: none;
